clusters/apps/env/production/stackrox/central/stackrox-ing.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: stackrox
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: stackrox.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`stackrox.${SECRET_DOMAIN}`)"
      middlewares:
        - name: l5d-stackrox-middleware
          namespace: stackrox
      services:
        - name: central
          port: 443
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: stackrox.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-stackrox-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "central.stackrox.svc.cluster.local:443"
